--- a/app/views/songs/_form.html.erb
+++ b/app/views/songs/_form.html.erb
@@ -1,9 +1,10 @@
 <%= form_for @song  do |f| %>
   <%= f.label :title %>
   <%= f.text_field :title %><br>
+    <%= f.hidden_field :artist_id %>
   <%= f.label :artist_name %>
-  <%= f.text_field :artist_name %>
-  <br />
+    <%= artist_select(f, params) %>
+  <br />	  <br>
 
   <%= f.submit %>
 <% end %>
